Made example-edit-toolbar visible only on hover. Corrected display:inline problems caused due to toggle. Added icon for re-order

--- a/css/TrialTool.css
+++ b/css/TrialTool.css
@@ -108,6 +108,7 @@ a.example-set-name {
     background-image: url('../images/opened.png');
     background-repeat: no-repeat;
     background-position: left center;
+    line-height: 16px;
 }
 
 a.example-name {
