--- a/css/fork.css
+++ b/css/fork.css
@@ -19,16 +19,25 @@ li.fork-buttons {
     color: #800000;
 }
 
+span.example-edit {
+    display: inline;
+}
+
 span.example-edit img {
-    width: 15px;
-    height: 15px;
+    width: 14px;
+    height: 14px;
     cursor: pointer;
     margin: 0 0 0 3px;
     vertical-align: middle;
+    display: inline;
 }
 
 span.example-edit input {
     height: 14px;
     font-size: 11px;
     padding: 2px 0 2px 0;
+}
+
+.example-reorder-hover {
+    border-bottom: SOLID #ABCDEF 10px;
 }
